# html2code

./: LICENSE  README.md  html2code.cabal
app/: Main.hs
src/Text/: Html2Code.hs
src/Text/Html2Code/: Parser.hs
src/Text/Html2Code/Writers/: Common.hs  GenericStructured.hs  Halogen.hs  Hyperscript.hs  W.hs
