name: html2code
version: 0.1.0.0
synopsis: Convert HTML to various template EDSLs
description: Parses HTML source, and generates source code in one of
             the supported EDSLs.
homepage: https://github.com/githubuser/html2code#readme
license: BSD3
license-file: LICENSE
author: Tobias Dammers
maintainer: tdammers@gmail.com
copyright: 2017 Tobias Dammers
category: Web
build-type: Simple
extra-source-files: README.md
cabal-version: >=1.10

library
  hs-source-dirs: src
  exposed-modules: Text.Html2Code
                 , Text.Html2Code.Writers.Hyperscript
                 , Text.Html2Code.Writers.Common
  build-depends: base >= 4.7 && < 5
               , tagsoup
               , text
               , mtl
  default-language: Haskell2010

executable html2code
  hs-source-dirs: app
  main-is: Main.hs
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends: base
               , html2code
  default-language: Haskell2010

test-suite html2code-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  build-depends: base
               , html2code
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010

source-repository head
  type: git
  location: https://github.com/githubuser/html2code
